feat: add the Footer

--- a/locales/en/footer.json
+++ b/locales/en/footer.json
@@ -20,7 +20,7 @@
   "GID": "GID",
   "Other DApps": "Other DApps",
   "To get the latest news, articles, and resources weekly via email.": "To get the latest news, articles, and resources weekly via email.",
-  "youremail@gmail.com": "youremail@gmail.com",
+  "Email placeholder": "youremail@gmail.com",
   "Subscribe": "Subscribe",
-  "2018-2022  © Powered By GotaBit.": "2018-2022  © Powered By GotaBit."
+  "Copyright": "2018-2022  © Powered By GotaBit."
 }
