feat: Development Core modules

--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -1,3 +1,7 @@
 {
-  "title": "Your web3 username, index"
+  "title": "Your web3 username, index",
+  "Core modules": "Core modules",
+  "GotaBitscan": "GotaBitscan",
+  "GotaBit Wallet": "GotaBit Wallet",
+  "Validator": "Validator"
 }
