feat: develop Build with us(unfinished)

--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -3,5 +3,13 @@
   "Core modules": "Core modules",
   "GotaBitscan": "GotaBitscan",
   "GotaBit Wallet": "GotaBit Wallet",
-  "Validator": "Validator"
+  "Validator": "Validator",
+  "Build with us": "Build with us",
+  "Build with us Subtitle": "To realise the goal of establishing a diversified and inclusive ecosystem, we have developed multiple tools.",
+  "Identification": "Identification",
+  "NFT": "NFT",
+  "GameFi": "GameFi",
+  "Cloud Service": "Cloud Service",
+  "SocialFi": "SocialFi",
+  "SocialFi1": "SocialFi1"
 }
