feat: Develop BuildIng Module Components

--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -11,5 +11,6 @@
   "GameFi": "GameFi",
   "Cloud Service": "Cloud Service",
   "SocialFi": "SocialFi",
-  "SocialFi1": "SocialFi1"
+  "Deploy your application easily": "Deploy your application easily",
+  "Start": "Start"
 }
