feat: Develop Main Components

--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -1,5 +1,6 @@
 {
   "title": "Your web3 username, index",
+  "MainTitle": "Decentralised, Privacy-first Cyberspace of the next generation",
   "Core modules": "Core modules",
   "GotaBitscan": "GotaBitscan",
   "GotaBit Wallet": "GotaBit Wallet",
@@ -12,5 +13,6 @@
   "Cloud Service": "Cloud Service",
   "SocialFi": "SocialFi",
   "Deploy your application easily": "Deploy your application easily",
-  "Start": "Start"
+  "Start": "Start",
+  "Join The Community": "Join The Community"
 }
