style: add a hover style

--- a/locales/zh/footer.json
+++ b/locales/zh/footer.json
@@ -7,8 +7,8 @@
   "Get GTB": "Get GTB",
   "GotaBit Wallet": "Gota Bit Wallet",
   "GotaBit Explorer": "Gota Bit Explorer",
-  "Validators": "Validators",
-  "Executors": "Executors",
+  "Validators": "验证器",
+  "Executors": "执行器",
   "CosmWasm IDE": "Cosm Wasm IDE",
   "Whitepaper": "Whitepaper",
   "Media Kit": "Media Kit",
