feat: add landing page

--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -14,5 +14,7 @@
   "SocialFi": "SocialFi",
   "Deploy your application easily": "Deploy your application easily",
   "Start": "Start",
-  "Join The Community": "Join The Community"
+  "Join The Community": "Join The Community",
+  "Decentralised, Privacy-first": "Decentralised, Privacy-first",
+  "Cyberspace of the next generation": "Cyberspace of the next generation"
 }
