--- a/locales/en/nav.json
+++ b/locales/en/nav.json
@@ -22,5 +22,6 @@
   "GotaBit Wallet": "GotaBit Wallet",
   "Node Verification": "Node Verification",
   "Node Application": "Node Application",
-  "Join Discord": "Join Discord"
+  "Join Discord": "Join Discord",
+  "About": "About"
 }
