--- a/locales/en/footer.json
+++ b/locales/en/footer.json
@@ -22,5 +22,5 @@
   "To get the latest news, articles, and resources weekly via email.": "To get the latest news, articles, and resources weekly via email.",
   "Email placeholder": "youremail@gmail.com",
   "Subscribe": "Subscribe",
-  "Copyright": "2018-2022  © Powered By GotaBit."
+  "Copyright": "2022  © Powered By GotaBit."
 }
