chore: add description for build with us

--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -16,5 +16,10 @@
   "Start": "Start",
   "Join The Community": "Join The Community",
   "Decentralised, Privacy-first": "Decentralised, Privacy-first",
-  "Cyberspace of the next generation": "Cyberspace of the next generation"
+  "Cyberspace of the next generation": "Cyberspace of the next generation",
+  "Decentralized Authentication System": "Decentralized Authentication System",
+  "Asset confirmation": "Asset confirmation",
+  "Play to earn": "Play to earn",
+  "Efficient development DAPP": "Efficient development DAPP",
+  "Valued social networks": "Valued social networks"
 }
