--- a/locales/zh/index.json
+++ b/locales/zh/index.json
@@ -1,4 +1,25 @@
 {
-  "title": "你的 web3 用户名, index",
-  "Core modules": "核心模块"
+  "title": "Your web3 username, index",
+  "MainTitle": "Decentralised, Privacy-first Cyberspace of the next generation",
+  "Core modules": "Core modules",
+  "GotaBitscan": "GotaBitscan",
+  "GotaBit Wallet": "GotaBit Wallet",
+  "Validator": "Validator",
+  "Build with us": "Build with us",
+  "Build with us Subtitle": "To realise the goal of establishing a diversified and inclusive ecosystem, we have developed multiple tools.",
+  "Identification": "Identification",
+  "NFT": "NFT",
+  "GameFi": "GameFi",
+  "Cloud Service": "Cloud Service",
+  "SocialFi": "SocialFi",
+  "Deploy your application easily": "Deploy your application easily",
+  "Start": "Start",
+  "Join The Community": "Join The Community",
+  "Decentralised, Privacy-first": "Decentralised, Privacy-first",
+  "Cyberspace of the next generation": "Cyberspace of the next generation",
+  "Decentralized Authentication System": "Decentralized Authentication System",
+  "Asset confirmation": "Asset confirmation",
+  "Play to earn": "Play to earn",
+  "Efficient development DAPP": "Efficient development DAPP",
+  "Valued social networks": "Valued social networks"
 }
