chore: update locales

--- a/locales/en/footer.json
+++ b/locales/en/footer.json
@@ -22,5 +22,10 @@
   "To get the latest news, articles, and resources weekly via email.": "To get the latest news, articles, and resources weekly via email.",
   "Email placeholder": "youremail@gmail.com",
   "Subscribe": "Subscribe",
-  "Copyright": "2022  © Powered By GotaBit."
+  "Copyright": "2022  © Powered By GotaBit.",
+  "Terms of Service": "Terms of Service",
+  "Join GotaBit": "Join GotaBit",
+  "Cookie Policy": "Cookie Policy",
+  "Contact Us": "Contact Us",
+  "Subscribe for GotaBit Network updates": "Subscribe for GotaBit Network updates"
 }
