chore: text and small style

--- a/locales/en/nav.json
+++ b/locales/en/nav.json
@@ -15,6 +15,7 @@
   "Developer": "Developer",
   "Documentation": "Documentation",
   "Search for the required tools and instructions for developing on GotaBit.": "Search for the required tools and instructions for developing on GotaBit.",
+  "Join the governance of GotaBit ecosystem.": "Join the governance of GotaBit ecosystem.",
   "Github": "Github",
   "Development Resources": "Development Resources",
   "Test the faucet": "Test the faucet",
