chore: update locales files

--- a/locales/en/footer.json
+++ b/locales/en/footer.json
@@ -27,5 +27,7 @@
   "Join GotaBit": "Join GotaBit",
   "Cookie Policy": "Cookie Policy",
   "Contact Us": "Contact Us",
-  "Subscribe for GotaBit Network updates": "Subscribe for GotaBit Network updates"
+  "Subscribe for GotaBit Network updates": "Subscribe for GotaBit Network updates",
+  "About": "About",
+  "Follow Us": "Follow Us"
 }
