--- a/locales/en/nav.json
+++ b/locales/en/nav.json
@@ -2,7 +2,6 @@
   "Learn": "Learn",
   "Build": "Build",
   "Ecosystem": "Ecosystem",
-  "Get Involved": "Get Involved",
   "Airdrop": "Airdrop",
   "Launch App": "Launch App",
   "Introduction": "Introduction",
@@ -23,6 +22,5 @@
   "GotaBit Wallet": "GotaBit Wallet",
   "Node Verification": "Node Verification",
   "Node Application": "Node Application",
-  "Join Discord": "Join Discord",
-  "About": "About"
+  "Join Discord": "Join Discord"
 }
