--- a/locales/zh/footer.json
+++ b/locales/zh/footer.json
@@ -7,20 +7,27 @@
   "Get GTB": "Get GTB",
   "GotaBit Wallet": "Gota Bit Wallet",
   "GotaBit Explorer": "Gota Bit Explorer",
-  "Validators": "验证器",
-  "Executors": "执行器",
+  "Validators": "Validators",
+  "Executors": "Executors",
   "CosmWasm IDE": "Cosm Wasm IDE",
   "Whitepaper": "Whitepaper",
   "Media Kit": "Media Kit",
   "Contact": "Contact",
-  "Blog": "博客",
-  "Team": "团队",
-  "Support": "支持",
+  "Blog": "Blog",
+  "Team": "Team",
+  "Support": "Support",
   "Network": "Network",
   "GID": "GID",
   "Other DApps": "Other DApps",
   "To get the latest news, articles, and resources weekly via email.": "To get the latest news, articles, and resources weekly via email.",
   "Email placeholder": "youremail@gmail.com",
-  "Subscribe": "Subscribe",
-  "Copyright": "2022  © Powered By GotaBit."
+  "Subscribe": "订阅",
+  "Copyright": "2022  © Powered By GotaBit.",
+  "Terms of Service": "服务条款",
+  "Join GotaBit": "加入GotaBit",
+  "Cookie Policy": "Cookie政策",
+  "Contact Us": "联系我们",
+  "Subscribe for GotaBit Network updates": "订阅GotaBit网络更新",
+  "About": "关于",
+  "Follow Us": "跟随我们"
 }
