--- a/locales/zh/index.json
+++ b/locales/zh/index.json
@@ -1,25 +1,25 @@
 {
-  "title": "Your web3 username, index",
-  "MainTitle": "Decentralised, Privacy-first Cyberspace of the next generation",
+  "MainTitle": "下一代去中心化隐私网络",
   "Core modules": "Core modules",
-  "GotaBitscan": "GotaBitscan",
-  "GotaBit Wallet": "GotaBit Wallet",
-  "Validator": "Validator",
-  "Build with us": "Build with us",
-  "Build with us Subtitle": "To realise the goal of establishing a diversified and inclusive ecosystem, we have developed multiple tools.",
-  "Identification": "Identification",
+  "GotaBit Wallet": "GotaBit 钱包",
+  "GotaBit Scan": "GotaBit 浏览器",
+  "Validator": "验证器",
+  "Build with us": "与我们一起建设",
+  "Build with us Subtitle": "为了实现建立多元化和包容性的生态系统，我们开发了多种工具",
+  "Identification": "认证",
   "NFT": "NFT",
   "GameFi": "GameFi",
-  "Cloud Service": "Cloud Service",
+  "Cloud Service": "云服务",
   "SocialFi": "SocialFi",
-  "Deploy your application easily": "Deploy your application easily",
-  "Start": "Start",
-  "Join The Community": "Join The Community",
-  "Decentralised, Privacy-first": "Decentralised, Privacy-first",
-  "Cyberspace of the next generation": "Cyberspace of the next generation",
-  "Decentralized Authentication System": "Decentralized Authentication System",
-  "Asset confirmation": "Asset confirmation",
-  "Play to earn": "Play to earn",
-  "Efficient development DAPP": "Efficient development DAPP",
-  "Valued social networks": "Valued social networks"
+  "Deploy your application easily": "轻松部署您的应用程序",
+  "Start": "开始",
+  "Join The Community": "加入社区",
+  "Start with": "立即使用",
+  "Decentralised, Privacy-first": "下一代",
+  "Cyberspace of the next generation": "去中心化隐私网络",
+  "Decentralized Authentication System": "去中心化认证系统",
+  "Asset confirmation": "资产确权",
+  "Play to earn": "边玩边赚",
+  "Efficient development DAPP": "高效便捷开发Dapp",
+  "Valued social networks": "有价值的社交网络"
 }
