--- a/locales/zh/nav.json
+++ b/locales/zh/nav.json
@@ -1,26 +1,26 @@
 {
-  "Learn": "Learn",
-  "Build": "Build",
-  "Ecosystem": "Ecosystem",
-  "Get Involved": "Get Involved",
+  "Learn": "学习",
+  "Build": "建设",
+  "Ecosystem": "生态系统",
   "Airdrop": "空投",
-  "Launch App": "启动应用",
-  "Introduction": "Introduction",
-  "What is GotaBit?": "What is GotaBit?",
-  "Explore the internal principles of GotaBit and its differences to other blockchains.": "Explore the internal principles of GotaBit and its differences to other blockchains.",
-  "FQA": "FQA",
-  "Token": "Token",
-  "What is GTB?": "What is GTB?",
-  "Understand the token economics of GTB.": "Understand the token economics of GTB.",
-  "Developer": "Developer",
-  "Documentation": "文档",
-  "Search for the required tools and instructions for developing on GotaBit.": "Search for the required tools and instructions for developing on GotaBit.",
+  "Launch App": "启动应用程序",
+  "Introduction": "介绍",
+  "What is GotaBit?": "什么是GotaBit？",
+  "Explore the internal principles of GotaBit and its differences to other blockchains.": "查看GotaBit的核心原理及与其它公链相比的优势",
+  "FQA": "帮助说明",
+  "Token": "代币",
+  "What is GTB?": "什么是GTB？",
+  "Understand the token economics of GTB.": "了解GTB的经济模型",
+  "Developer": "开发者",
+  "Documentation": "开发文档",
+  "Search for the required tools and instructions for developing on GotaBit.": "查看在GotaBit上开发所需的工具和说明",
+  "Join the governance of GotaBit ecosystem.": "加入GotaBit生态系统的节点治理",
   "Github": "Github",
-  "Development Resources": "Development Resources",
-  "Test the faucet": "Test the faucet",
-  "GotaBitscan": "GotaBitscan",
-  "GotaBit Wallet": "GotaBit Wallet",
-  "Node Verification": "Node 验证",
-  "Node Application": "Node 应用",
-  "Join Discord": " 加入 Discord"
+  "Development Resources": "开发资源",
+  "Test the faucet": "测试网水龙头",
+  "GotaBitscan": "区块浏览器",
+  "GotaBit Wallet": "GotaBit钱包",
+  "Node Verification": "节点验证",
+  "Node Application": "节点应用",
+  "Join Discord": "加入Discord"
 }
