--- a/locales/en/dapp.json
+++ b/locales/en/dapp.json
@@ -3,6 +3,7 @@
   "GotaBit Ecosystem": "GotaBit Ecosystem",
   "An open and interoperable smart contract platform optimised for DeFi applications which can achieve faster, more efficient and lower-cost deployment of applications.": "An open and interoperable smart contract platform optimised for DeFi applications which can achieve faster, more efficient and lower-cost deployment of applications.",
   "Create": "Create",
+  "Application": "Application",
   "Core ecological application": "Core ecological application",
   "GID": "GID",
   "GID is building an end-to-end encrypted login service that will allow users to log in to many websites with a single, transferable identity.": "GID is building an end-to-end encrypted login service that will allow users to log in to many websites with a single, transferable identity.",
