--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,3 +1,7 @@
 {
-  "title": "Your web3 username, common"
+  "We use cookies to provide the best online experience. By using this website, you agree to our": "We use cookies to provide the best online experience. By using this website, you agree to our",
+  "and": "and",
+  "Cookie": "Cookie",
+  "Privacy Policy": "Privacy Policy",
+  "Got it": "Got it"
 }
