feat: add the in development tag

--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -21,5 +21,6 @@
   "Asset confirmation": "Asset confirmation",
   "Play to earn": "Play to earn",
   "Efficient development DAPP": "Efficient development DAPP",
-  "Valued social networks": "Valued social networks"
+  "Valued social networks": "Valued social networks",
+  "In development": "In development"
 }
