--- a/locales/zh/index.json
+++ b/locales/zh/index.json
@@ -21,5 +21,6 @@
   "Asset confirmation": "资产确权",
   "Play to earn": "边玩边赚",
   "Efficient development DAPP": "高效便捷开发Dapp",
-  "Valued social networks": "有价值的社交网络"
+  "Valued social networks": "有价值的社交网络",
+  "In development": "开发中"
 }
