feat: add footer v3

--- a/locales/en/footer.json
+++ b/locales/en/footer.json
@@ -29,5 +29,7 @@
   "Contact Us": "Contact Us",
   "Subscribe for GotaBit Network updates": "Subscribe for GotaBit Network updates",
   "About": "About",
-  "Follow Us": "Follow Us"
+  "Follow Us": "Follow Us",
+  "Terms": "Terms",
+  "Privacy": "Privacy"
 }
