--- a/locales/zh/footer.json
+++ b/locales/zh/footer.json
@@ -29,5 +29,7 @@
   "Contact Us": "联系我们",
   "Subscribe for GotaBit Network updates": "订阅GotaBit网络更新",
   "About": "关于",
-  "Follow Us": "跟随我们"
+  "Follow Us": "跟随我们",
+  "Terms": "条款",
+  "Privacy": "隐私"
 }
